--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-google-fonts": "^0.0.0",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "link": "^2.1.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "^0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-super-grid": "^6.0.1",
+    "react-native-svg": "^15.6.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
